tests/expectations/parser/program/bidi_comment_fail.out
Error [EPAR0370051]: Unicode bidi override code point encountered.
    --> test:3:5
     |
   3 |     ‮<-here
     |     ^^^
